# marimo-pokemon

./: .gitignore  00_ml_in_business.py  01_data_engineering.py  02_eda_and_features.py  03_model_training.py  04_model_evaluation.py  05_inference_service.py  06_production_monitoring.py  07_collaboration.py  08_capstone.py  CAPSTONE_RUBRIC.md  COURSE_OUTLINE.md  DATASET_SUMMARY.md  INFERENCE_README.md  LICENSE  MODULE_1_EVALUATION.md  PROJECT_COMPLETE.md  README.md  REVIEW_SUMMARY.md  TESTING_GUIDE.md  TESTING_RESULTS.md  TROUBLESHOOTING.md  USING_PRESPLIT_DATA.md  exercises_00.py  exercises_01.py  exercises_02.py  exercises_03.py  exercises_04.py  exercises_05.py  exercises_06.py  exercises_07.py  inference_server.py  main.py  ml_cheatsheet.md  pokemon_predictor_ui.html  progress_tracker.md  prompt.md  pyproject.toml  test_inference_server.py  test_integration.py  (+2 more)
.claude/: settings.local.json
__marimo__/session/: 01_data_engineering.py.json  02_eda_and_features.py.json  03_model_training.py.json  04_model_evaluation.py.json  05_inference_service.py.json  exercises_01.py.json  exercises_03.py.json
data/: README.md  create_splits.py  fetch_real_pokemon_cards.py  generate_comprehensive_dataset.py  generate_dataset.py  load_splits.py  pokemon_cards.csv  pokemon_cards_sample_1000.csv
data/clean/: pokemon_cards_clean_latest.csv
data/splits/: README.md  pokemon_test.csv  pokemon_train.csv  pokemon_validation.csv  split_metadata.json
models/: pokemon_classifier_v1.0.0_metadata.json
tmp/: build_progress.md  implementation_plan.md
