[project]
name = "marimo-pokemon"
version = "0.1.0"
description = "Professional ML Engineering Onboarding Project - Pokemon Card Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.8",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pandera>=0.18.0",
    "pydantic>=2.6.0",
]
