[project]
name = "marimo-pokemon"
version = "2.0.0"
description = "Complete ML Engineering Course - 8 Modules + Capstone (Business, Technical, Collaboration)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.8",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pandera>=0.18.0",
    "pydantic>=2.6.0",
    "mlflow>=2.9.0",
    "scipy>=1.11.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]
